[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/TowerPoint.gd" type="Script" id=1]
[ext_resource path="res://Towers/LaserTower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Towers/MagneTower.tscn" type="PackedScene" id=3]
[ext_resource path="res://Towers/FlameTower.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/menu_animations.tres" type="Animation" id=5]
[ext_resource path="res://Tiles/tileset_12.png" type="Texture" id=6]
[ext_resource path="res://UI/add_button.png" type="Texture" id=7]
[ext_resource path="res://UI/add_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://UI/remove_button.png" type="Texture" id=9]
[ext_resource path="res://UI/remove_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://UI/upgrade_button.png" type="Texture" id=11]
[ext_resource path="res://UI/upgrade_button_pressed.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]

resource_name = "show_menu"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("btnAdd:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("btnRemove:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("btnUpgrade:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("btnAdd:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, 64 ), Vector2( 35, -16 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("btnRemove:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, 32 ), Vector2( 35, -48 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("btnUpgrade:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, 96 ), Vector2( 35, 16 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("btnUpgrade:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("btnRemove:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("btnAdd:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TowerPoint" type="Node2D" groups=[
"tower_points",
]]

script = ExtResource( 1 )
towers = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hide_menu = ExtResource( 5 )
anims/show_menu = SubResource( 1 )
blend_times = [  ]

[node name="btnRaiseMenu" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="btnAdd" type="TextureButton" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_top = 64.0
margin_right = 99.0
margin_bottom = 128.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="btnRemove" type="TextureButton" parent="." index="3"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_top = 32.0
margin_right = 99.0
margin_bottom = 96.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="btnUpgrade" type="TextureButton" parent="." index="4"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_top = 96.0
margin_right = 99.0
margin_bottom = 160.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="MenuTimeout" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[connection signal="pressed" from="btnRaiseMenu" to="." method="_on_btnRaiseMenu_pressed"]

[connection signal="pressed" from="btnAdd" to="." method="_on_btnAdd_pressed"]

[connection signal="pressed" from="btnRemove" to="." method="_on_btnRemove_pressed"]

[connection signal="pressed" from="btnUpgrade" to="." method="_on_btnUpgrade_pressed"]

[connection signal="timeout" from="MenuTimeout" to="." method="_on_MenuTimeout_timeout"]


